dd graphql-scalars

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
+    "graphql-scalars": "^1.0.9",
     "graphql-yoga": "^1.18.3",
     "mongoose": "^5.9.6"
   }
