--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "cloudinary": "^1.21.0",
     "dotenv": "^8.2.0",
     "graphql-scalars": "^1.0.9",
     "graphql-yoga": "^1.18.3",
